package controller.commands;
public interface OperationCommand {
    void operate();
    void compensate();
}
